Fix #2882 assigned enh. Make circles bigger We don't want our circles smaller than LL's as this might make ours more difficult to tap on smaller devices. Currently we have 10 across on my device, they have 9.

--- a/lot-ticket/app/css/app.css
+++ b/lot-ticket/app/css/app.css
@@ -43,23 +43,23 @@
 
 .ball {
 	border: 1px solid #929292;
-	min-width: 22px;
-	min-height: 22px;
-	max-width: 22px;
-	max-height: 22px;
-	width: 22px;
-	height: 20px;
+	min-width: 25px;
+	min-height: 25px;
+	max-width: 25px;
+	max-height: 25px;
+	width: 27px;
+	height: 25px;
 	border-radius: 100px;
 	text-align: center;
 	padding: 4px;
 	font-size: 14px;
-    margin-right: 5px;
-    margin-bottom: 10px;
+	margin-right: 5px;
+	margin-bottom: 10px;
 	display: inline-table;
 	box-sizing: content-box !important;
-    line-height: 21px;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
-   	vertical-align: top;
+	line-height: 26px;
+	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+	vertical-align: top;
 }
 
 .ball.selected {
